# vaner-desktop

./: .gitignore  CHANGELOG.md  CNAME  Dockerfile.ship-gate  MAINTAINING.md  README.md  index.html  package.json  pnpm-lock.yaml  release-key.asc  svelte.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
conf/: distributions  options
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db  tracking.db
dists/stable/: InRelease  Release  Release.gpg
scripts/: install.sh  regen-contract-bindings.mjs  release-key.asc  ship-gate.sh
scripts/ci/: build-apt-repo.sh  sign-artifacts.sh  sign-deb.sh  verify-artifacts.sh  verify-deb.sh
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: agent_detector.rs  bring_up.rs  clients.rs  commands.rs  companion.rs  daemon_audit.rs  diagnostics.rs  engine.rs  engine_config.rs  engine_service.rs  engine_status_task.rs  lib.rs  main.rs  ollama.rs  ollama_health_task.rs  onboarding.rs  popover.rs  prepared_work_endpoint.rs  session.rs  setup.rs  sse_task.rs  tray.rs  updater.rs  vaner_cli.rs  workspace.rs
src/lib/: tokens.css
src/lib/components/: FirstRunGuidance.svelte  ModelsCard.svelte  PopoverFooter.svelte  RecommendedPresetCard.svelte  SetupWizard.svelte  StrayDaemonsBanner.svelte  ToastStack.svelte  UpdateBanner.svelte  WizardVerificationPanel.svelte
src/lib/contract/: card.ts  setup-types.ts  (+1 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
winget/: README.md
(+82 files in other folders)
